duniverse/menhirLib.20200211/test/static/bad/unification-error-at-toplevel.mly
%start<int> a
%token A
%%

a: b(A) b(A, A) {}

b(X): X {}
