duniverse/menhirLib.20200211/test/static/bad/unification-error-at-toplevel.exp
File "unification-error-at-toplevel.mly", line 5, characters 8-9:
Error: does the symbol "b" expect 1 or 2 arguments?
